--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,8 @@
 {
+    "name": "gdc-todos-frontend",
+    "version": "1.0.0",
+    "description": "Todo list frontend",
+    "author": "Adam Richards",
     "private": true,
     "scripts": {
         "dev": "npm run development",
@@ -21,14 +25,7 @@
     },
     "dependencies": {
         "ajv": "^6.10.2",
-        "bluebird": "^3.5.5",
-        "body-parser": "^1.19.0",
-        "connect-multiparty": "^2.2.0",
-        "express": "^4.17.1",
         "imagemin": "^6.0.0",
-        "path": "^0.12.7",
-        "sqlite3": "^4.0.9",
-        "umzug": "^2.2.0",
         "validate.js": "^0.12.0",
         "vue-router": "^3.0.1",
         "vuex": "^3.0.1",
