--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.0",
     "connect-multiparty": "^2.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.1.1",
     "path": "^0.12.7",
     "sqlite3": "^4.0.9",
     "umzug": "^2.2.0"
